fixed file dialog

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+ags (7.2.11)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed file dialog single selection open
+	* improved signal handling of check and toggle buttons, listen to property active
+
 ags (7.2.10)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
