--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (7.3.1)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* removed set sensitive calls to soundcard editor, always allow the user to edit
+
 ags (7.3.0)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
