reenabled copy resources on macOS

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (7.3.5)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* reenabled copying resources on macOS
+
 ags (7.3.4)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
