--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (7.3.7)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* work-around for not proper applying presets with CoreAudio
+
 ags (7.3.6)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
