--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (7.3.8)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* changed CoreAudio input data type from gint16 to gint32
+
 ags (7.3.7)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
