--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+ags (7.3.11)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* updated user's handbook to explain shift behavior within notation and automation editor
+	* fixed always use AGS_SOUNDCARD_FLOAT on macOS with AgsCoreAudioPort
+
 ags (7.3.10)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
