--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (7.3.13)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed CoreAudio buffer size
+
 ags (7.3.12)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
