--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (7.3.14)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed detect non-interleaved buffers with CoreAudio
+
 ags (7.3.13)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
