--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (7.3.15)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed compiler errors
+
 ags (7.3.14)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
