--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+ags (7.3.19)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* disabled configure format
+
+ags (7.3.18)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* improved configure format
+
+ags (7.3.17)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* improved configure format
+
 ags (7.3.16)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
