--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (7.3.24)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* improved error detection with CoreAudio
+
 ags (7.3.23)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
