--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+ags (7.3.25)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed typos
+	* minor improvements
+
 ags (7.3.24)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
