--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (7.3.28)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* minor improvements
+
 ags (7.3.27)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
