added missing cast

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (7.3.29)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed added missing cast
+
 ags (7.3.28)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
