implemented ags_atomic.h

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+ags (7.4.0)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* modified C standard to gnu11
+	* implemented ags_atomic.h
+
 ags (7.3.29)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
