--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@ ags (7.4.0)
 	* implemented ags_atomic.h
 	* implemented ags_star_synth_util.c
 	* TODO:JK: implemented ags-fx-star-synth
+	* TODO:JK: implemented AgsStargazerSynth
 	* modified C standard to gnu11
 	* removed all volatile modifiers
 	* refactored GSequencer to use ags_atomic.h
