--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,10 @@
 ags (7.4.0)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* implemented AgsStargazerSynth
+	* implemented ags_star_synth_util.c FM synth supporting vibrato
+	* implemented ags-fx-star-synth FM synth with phase modulation
 	* implemented ags_atomic.h
-	* implemented ags_star_synth_util.c
-	* TODO:JK: implemented ags-fx-star-synth
-	* TODO:JK: implemented AgsStargazerSynth
 	* modified C standard to gnu11
 	* removed all volatile modifiers
 	* refactored GSequencer to use ags_atomic.h
