fixed missing properties of ags-fx-star-synth and persistency of AgsStargazerSynth

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@ ags (7.4.0)
 	* implemented AgsStargazerSynth
 	* implemented ags_star_synth_util.c FM synth supporting vibrato
 	* implemented ags-fx-star-synth FM synth with phase modulation
+	* implemente persistency of AgsStargazerSynth
 	* implemented ags_atomic.h
 	* modified C standard to gnu11
 	* removed all volatile modifiers
