--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+ags (7.4.8)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* improved make use of LV2 atom forge
+	* minor bug-fixes related to Lv2 support
+
 ags (7.4.7)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
