--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (7.4.9)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* minor improvements to ags-fx-lv2
+
 ags (7.4.8)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
