--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,11 @@
 ags (7.5.0)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* implemented AgsQuantumSynth
+	* TODO:JK: implemented ags-fx-seq-synth
+	* TODO:JK: implemented ags_seq_synth_util.[ch]
 	* implemented AgsFileEntry
-	* refactored AgsFileWidget make use of AgsFileEntry
+	* minor improvements
 
 ags (7.4.12)
 
