--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+ags (7.5.2)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* improved play button
+	* improved macOS dark theme
+
 ags (7.5.1)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
