--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+ags (7.5.5)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* improved AgsTrackMapper make use of AgsMachineUtil
+	* fixed AgsTrackMapper resize channels
+	* fixed AgsOscMeterController unref port twice
+	* fixed AgsOscMeterController missing copy function
+	* minor improvements
+
 ags (7.5.4)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
