--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (7.6.0)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* reverted ags_check_system_functional_programs_ui
+
 ags (7.5.5)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
