--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (7.6.3)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed all soundcard backends ::tic() correct delay_counter check
+
 ags (7.6.2)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
