--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (7.6.4)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* improved all soundcard backends init delay_counter
+
 ags (7.6.3)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
