--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+ags (7.6.14)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed sscanf() string allocation in ags_composite_editor_paste_wave_async()
+	* fixed sscanf() string allocation in ags_wave_insert_base64_from_clipboard_extended()
+
 ags (7.6.13)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
