--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+ags (7.6.15)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* implemented 60 and 75 Hz thread max precision in performance preferences
+	* fixed wave form editor clipboard
+	* fixed remaining sscanf() string allocation
+
 ags (7.6.14)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
