--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (7.6.16)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed wave form editor clipboard
+
 ags (7.6.15)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
