--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
 ags (7.7.0)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
-	* TODO:JK: implemented AgsLowPassFilterUtil
+	* implemented AgsLowPassFilterUtil based on Invada Studio LADSPA plugin
 	* TODO:JK: implemented AgsAmplifierUtil
 	* fixed ags-fx-star-synth sync LFO freq 0 and 1 default value
 
