--- a/ChangeLog
+++ b/ChangeLog
@@ -2,7 +2,7 @@ ags (7.7.0)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
 	* implemented AgsLowPassFilterUtil based on Invada Studio LADSPA plugin
-	* TODO:JK: implemented AgsAmplifierUtil
+	* implemented AgsAmplifierUtil based on Fil LADSPA plugin
 	* fixed ags-fx-star-synth sync LFO freq 0 and 1 default value
 
 ags (7.6.18)
