--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (7.7.4)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed phase sync of ags_raven_synth_util.c
+
 ags (7.7.3)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
