--- a/ChangeLog
+++ b/ChangeLog
@@ -2,7 +2,7 @@ ags (7.7.5)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
 	* fixed ags-fx-pattern counter check has 16th pulse
-	* fixed machine selector popup menu
+	* fixed machine selector popup menu move down
 
 ags (7.7.4)
 
