--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (7.7.11)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed target install-html-mkdir in Makefile.am
+
 ags (7.7.10)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
