--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@ ags (7.7.11)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
 	* fixed target install-html-mkdir in Makefile.am
+	* fixed variant type in ags_gsequencer_application.c
 
 ags (7.7.10)
 
